exports[`Layout renders with props 1`] = `
<div
  className="background--light-primary"
  style={
    Object {
      "height": "100%",
      "overflowY": "hidden",
    }
  }>
  <section
    className="hard background--light-secondary">
    <h6
      className="push-left soft-half-bottom soft-top">
      Recommended by NewSpring
    </h6>
  </section>
  <DiscoverHero
    image="http://test.com/2x1.jpg"
    link="test-title"
    topicName="test title" />
  <section
    className="soft-half background--light-secondary">
    <div
      className="grid">
      <LikesItem
        like={
          Object {
            "category": "Need to know",
            "date": "12-12-2012",
            "icon": "icon-leaf-outline",
            "image": "http://test.com/2x1.jpg",
            "link": "recommend-one",
            "title": "recommend one",
          }
        } />
      <LikesItem
        like={
          Object {
            "category": "Need to know",
            "date": "12-12-2012",
            "icon": "icon-leaf-outline",
            "image": "http://test.com/2x1.jpg",
            "link": "recommend-two",
            "title": "recommend two",
          }
        } />
    </div>
  </section>
  <div
    className="soft-half background--light-secondary">
    <div
      className="card soft one-whole">
      <div
        className="card__item">
        <p
          className="flush">
          <small>
            <em>
              Are you looking for 
              <span>
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="text-one">
                  text one
                </Link>
              </span>
              <span>
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="text-two">
                  text two
                </Link>
              </span>
              ?
            </em>
          </small>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout works without featured item 1`] = `
<div
  className="background--light-primary"
  style={
    Object {
      "height": "100%",
      "overflowY": "hidden",
    }
  }>
  <section
    className="hard background--light-secondary">
    <h6
      className="push-left soft-half-bottom soft-top">
      Recommended by NewSpring
    </h6>
  </section>
  <section
    className="soft-half background--light-secondary">
    <div
      className="grid">
      <LikesItem
        like={
          Object {
            "category": "Need to know",
            "date": "12-12-2012",
            "icon": "icon-leaf-outline",
            "image": "http://test.com/2x1.jpg",
            "link": "recommend-one",
            "title": "recommend one",
          }
        } />
      <LikesItem
        like={
          Object {
            "category": "Need to know",
            "date": "12-12-2012",
            "icon": "icon-leaf-outline",
            "image": "http://test.com/2x1.jpg",
            "link": "recommend-two",
            "title": "recommend two",
          }
        } />
    </div>
  </section>
  <div
    className="soft-half background--light-secondary">
    <div
      className="card soft one-whole">
      <div
        className="card__item">
        <p
          className="flush">
          <small>
            <em>
              Are you looking for 
              <span>
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="text-one">
                  text one
                </Link>
              </span>
              <span>
                <Link
                  onlyActiveOnIndex={false}
                  style={Object {}}
                  to="text-two">
                  text two
                </Link>
              </span>
              ?
            </em>
          </small>
        </p>
      </div>
    </div>
  </div>
</div>
`;
